WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.h

BOOL   LCAPI lcBlockSelectEnt   (HANDLE hBlock, HANDLE hEntity, BOOL bSelect);
BOOL   LCAPI lcBlockSelErase    (HANDLE hBlock);
BOOL   LCAPI lcBlockSelMove     (HANDLE hBlock, double dX, double dY, BOOL bCopy, BOOL bNewSelect);
BOOL   LCAPI lcBlockSelScale    (HANDLE hBlock, double X0, double Y0, double Scal, BOOL bCopy, BOOL bNewSelect);
BOOL   LCAPI lcBlockSelRotate   (HANDLE hBlock, double X0, double Y0, double Angle, BOOL bCopy, BOOL bNewSelect);
BOOL   LCAPI lcBlockSelMirror   (HANDLE hBlock, double X1, double Y1, double X2, double Y2, BOOL bCopy, BOOL bNewSelect);
BOOL   LCAPI lcBlockSelExplode  (HANDLE hBlock);
HANDLE LCAPI lcBlockSelJoin     (HANDLE hBlock, double Delta);
HANDLE LCAPI lcBlockGetFirstSel (HANDLE hBlock);
HANDLE LCAPI lcBlockGetNextSel  (HANDLE hBlock);
// Graphic object modify
BOOL   LCAPI lcEntErase     (HANDLE hEnt, BOOL bErase);
 
BOOL   LCAPI lcEntMove      (HANDLE hEnt, double dX, double dY);
 
BOOL   LCAPI lcEntScale     (HANDLE hEnt, double X0, double Y0, double Scal);
 
BOOL   LCAPI lcEntRotate    (HANDLE hEnt, double X0, double Y0, double Angle);
BOOL   LCAPI lcEntMirror    (HANDLE hEnt, double X1, double Y1, double X2, double Y2);
BOOL   LCAPI lcEntExplode   (HANDLE hEnt, BOOL bSelect);
BOOL   LCAPI lcEntOffset    (HANDLE hEnt, double Dist);
 
BOOL   LCAPI lcEntToTop     (HANDLE hEnt);
BOOL   LCAPI lcEntToBottom  (HANDLE hEnt);
BOOL   LCAPI lcEntToAbove   (HANDLE hEnt, HANDLE hEnt2);
BOOL   LCAPI lcEntToUnder   (HANDLE hEnt, HANDLE hEnt2);
BOOL   LCAPI lcEntGetGrip   (HANDLE hEnt, int iGrip, double* pX, double* pY);
 
BOOL   LCAPI lcEntPutGrip   (HANDLE hEnt, int iGrip, double X, double Y);
BOOL   LCAPI lcEntUpdate    (HANDLE hEnt);
      
BOOL   LCAPI lcEntCopyBase  (HANDLE hEnt, HANDLE hEntFrom);
int    LCAPI lcIntersection   (HANDLE hEnt, HANDLE hEnt2);
BOOL   LCAPI lcInterGetPoint  (int iPoint, double* pX, double* pY);
// Polyline Vertices
HANDLE LCAPI lcPlineAddVer      (HANDLE hPline, HANDLE hVer, double X, double Y);
HANDLE LCAPI lcPlineAddVer2     (HANDLE hPline, HANDLE hVer, double X, double Y, double Param, double W0, double W1);
HANDLE LCAPI lcPlineAddVerDir   (HANDLE hPline, HANDLE hVer, double Ang, double Length);
BOOL   LCAPI lcPlineDeleteVer   (HANDLE hPline, HANDLE hVer);
HANDLE LCAPI lcPlineGetFirstVer (HANDLE hPline);
HANDLE LCAPI lcPlineGetNextVer  (HANDLE hPline, HANDLE hVer);
HANDLE LCAPI lcPlineGetLastVer  (HANDLE hPline);
HANDLE LCAPI lcPlineGetPrevVer  (HANDLE hPline, HANDLE hVer);
HANDLE LCAPI lcPlineGetVer      (HANDLE hPline, int Index);
HANDLE LCAPI lcPlineGetVerPt    (HANDLE hPline, double X, double Y, double Delta);
HANDLE LCAPI lcPlineGetSeg      (HANDLE hPline, double X, double Y, double Delta);
BOOL   LCAPI lcPlineReverse     (HANDLE hPline);
BOOL   LCAPI lcPlineSimple      (HANDLE hPline, BOOL bSimple, int nLines);
int    LCAPI lcPlineContainPoint(HANDLE hPline, double X, double Y);
BOOL   LCAPI lcPlineGetRoundPrm (HANDLE hPline, HANDLE hVer, double* px0, double* py0, double* pBulge, double* px1, double* py1);   // undoc (dwg plugin)
// Mline Vertices
HANDLE LCAPI lcMlineAddVer      (HANDLE hMline, HANDLE hVer, double X, double Y);
HANDLE LCAPI lcMlineAddVerDir   (HANDLE hMline, HANDLE hVer, double Ang, double Length);
BOOL   LCAPI lcMlineDeleteVer   (HANDLE hMline, HANDLE hVer);
HANDLE LCAPI lcMlineGetFirstVer (HANDLE hMline);
HANDLE LCAPI lcMlineGetNextVer  (HANDLE hMline, HANDLE hVer);
HANDLE LCAPI lcMlineGetLastVer  (HANDLE hMline);
HANDLE LCAPI lcMlineGetPrevVer  (HANDLE hMline, HANDLE hVer);
HANDLE LCAPI lcMlineGetVer      (HANDLE hMline, int Index);
HANDLE LCAPI lcMlineGetVerPt    (HANDLE hMline, double X, double Y, double Delta);
HANDLE LCAPI lcMlineGetSeg      (HANDLE hMline, double X, double Y, double Delta);   // undoc
BOOL   LCAPI lcMlineReverse     (HANDLE hMline);
// RPlan functions
HANDLE LCAPI lcRPlanAddVer      (HANDLE hRPlan, double X, double Y);
BOOL   LCAPI lcRPlanSetCurve    (HANDLE hVer, double Radius, double LenClot1, double LenClot2);
BOOL   LCAPI lcRPlanSetPos      (HANDLE hVer, double X, double Y);
BOOL   LCAPI lcRPlanDeleteVer   (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetFirstVer (HANDLE hRPlan);
HANDLE LCAPI lcRPlanGetNextVer  (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetLastVer  (HANDLE hRPlan);
HANDLE LCAPI lcRPlanGetPrevVer  (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetVer      (HANDLE hRPlan, int Index);
BOOL   LCAPI lcRPlanGetPoint    (HANDLE hRPlan, double Dist, double* pX, double* pY, double* pAngle, int* pSide);
BOOL   LCAPI lcRPlanGetDist     (HANDLE hRPlan, double X, double Y, double* pX2, double* pY2, double* pDist, double* pOffset);
// Viewport
BOOL   LCAPI lcVportSetView     (HANDLE hVport, double Xcen, double Ycen, double Scal, double Angle);
BOOL   LCAPI lcVportFrolClear   (HANDLE hVport);
BOOL   LCAPI lcVportFrolAdd     (HANDLE hVport, HANDLE hLayer);
HANDLE LCAPI lcVportFrolGet     (HANDLE hVport, int iLayer);
BOOL   LCAPI lcVportIsFrol      (HANDLE hVport, HANDLE hLayer);
// Block attribute
HANDLE LCAPI lcBlkRefAddAtt      (HANDLE hBlockRef, LPCWSTR szTag, LPCWSTR szValue);    // undoc
HANDLE LCAPI lcBlkRefGetFirstAtt (HANDLE hBlockRef);
HANDLE LCAPI lcBlkRefGetNextAtt  (HANDLE hBlockRef, HANDLE hAttrib);
HANDLE LCAPI lcBlkRefGetAtt      (HANDLE hBlockRef, LPCWSTR szTag);
// Hatch
BOOL   LCAPI lcHatchSetPattern   (HANDLE hHatch, LPCWSTR szFileName, LPCWSTR szPatName, double Scal, double Angle);
BOOL   LCAPI lcHatchBoundStart   (HANDLE hHatch);
BOOL   LCAPI lcHatchBoundPoint   (HANDLE hHatch, double X, double Y);
BOOL   LCAPI lcHatchBoundEndLoop (HANDLE hHatch);
 
BOOL   LCAPI lcHatchBoundEnd     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatStart     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatLine      (HANDLE hHatch, double Angle, double x0, double y0, double dx, double dy, int nDash, double L0, double L1, double L2, double L3, double L4, double L5, double L6, double L7);
BOOL   LCAPI lcHatchPatEnd       (HANDLE hHatch);
int    LCAPI lcHatchGetLoopSize  (HANDLE hHatch, int iLoop);
BOOL   LCAPI lcHatchGetPoint     (HANDLE hHatch, int iPnt, double* pX, double* pY);
// Rectangle
int    LCAPI lcRectGetPolyline   (HANDLE hRect, double* pX, double* pY, double* pBulge);
// Construction line
BOOL   LCAPI lcXlinePutDir  (HANDLE hXline, double X, double Y);
// TIN object
BOOL   LCAPI lcTinClear          (HANDLE hTin, BOOL bOnlyTrians);
BOOL   LCAPI lcTinLoad           (HANDLE hTin, LPCWSTR szFileName, BOOL bEmbed);
BOOL   LCAPI lcTinSave           (HANDLE hTin, LPCWSTR szFileName, BOOL bOverwriteExist);
HANDLE LCAPI lcTinAddPtype       (HANDLE hTin, LPCWSTR szName, LPCWSTR szNotes, int Color);
HANDLE LCAPI lcTinAddPoint       (HANDLE hTin, HANDLE hPtype, double X, double Y, double Z);
HANDLE LCAPI lcTinAddTrian       (HANDLE hTin, HANDLE hPt0, HANDLE hPt1, HANDLE hPt2);
BOOL   LCAPI lcTinNormalize      (HANDLE hTin);
BOOL   LCAPI lcTinGetZ           (HANDLE hTin, double X, double Y, double* pZ);