WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.bas

Public Declare Function lcBlockSelectEnt Lib "Litecad.dll" (ByVal hBlock As Long, ByVal hEntity As Long, ByVal bSelect As Long) As Long
Public Declare Function lcBlockSelErase Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcBlockSelMove Lib "Litecad.dll" (ByVal hBlock As Long, ByVal dX As Double, ByVal dY As Double, ByVal bCopy As Long, ByVal bNewSelect As Long) As Long
Public Declare Function lcBlockSelScale Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal Scal As Double, ByVal bCopy As Long, ByVal bNewSelect As Long) As Long
Public Declare Function lcBlockSelRotate Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal Angle As Double, ByVal bCopy As Long, ByVal bNewSelect As Long) As Long
Public Declare Function lcBlockSelMirror Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal bCopy As Long, ByVal bNewSelect As Long) As Long
Public Declare Function lcBlockSelExplode Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcBlockSelJoin Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Delta As Double) As Long
Public Declare Function lcBlockGetFirstSel Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcBlockGetNextSel Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcEntErase Lib "Litecad.dll" (ByVal hEnt As Long, ByVal bErase As Long) As Long
Public Declare Function lcEntMove Lib "Litecad.dll" (ByVal hEnt As Long, ByVal dX As Double, ByVal dY As Double) As Long
Public Declare Function lcEntScale Lib "Litecad.dll" (ByVal hEnt As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal Scal As Double) As Long
Public Declare Function lcEntRotate Lib "Litecad.dll" (ByVal hEnt As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal Angle As Double) As Long
Public Declare Function lcEntMirror Lib "Litecad.dll" (ByVal hEnt As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double) As Long
Public Declare Function lcEntExplode Lib "Litecad.dll" (ByVal hEnt As Long, ByVal bSelect As Long) As Long
Public Declare Function lcEntOffset Lib "Litecad.dll" (ByVal hEnt As Long, ByVal Dist As Double) As Long
Public Declare Function lcEntToTop Lib "Litecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function lcEntToBottom Lib "Litecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function lcEntToAbove Lib "Litecad.dll" (ByVal hEnt As Long, ByVal hEnt2 As Long) As Long
Public Declare Function lcEntToUnder Lib "Litecad.dll" (ByVal hEnt As Long, ByVal hEnt2 As Long) As Long
Public Declare Function lcEntGetGrip Lib "Litecad.dll" (ByVal hEnt As Long, ByVal iGrip As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function lcEntPutGrip Lib "Litecad.dll" (ByVal hEnt As Long, ByVal iGrip As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcEntUpdate Lib "Litecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function lcEntCopyBase Lib "Litecad.dll" (ByVal hEnt As Long, ByVal hEntFrom As Long) As Long
Public Declare Function lcIntersection Lib "Litecad.dll" (ByVal hEnt As Long, ByVal hEnt2 As Long) As Long
Public Declare Function lcInterGetPoint Lib "Litecad.dll" (ByVal iPoint As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function lcPlineAddVer Lib "Litecad.dll" (ByVal hPline As Long, ByVal hVer As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcPlineAddVer2 Lib "Litecad.dll" (ByVal hPline As Long, ByVal hVer As Long, ByVal X As Double, ByVal Y As Double, ByVal Param As Double, ByVal W0 As Double, ByVal W1 As Double) As Long
Public Declare Function lcPlineAddVerDir Lib "Litecad.dll" (ByVal hPline As Long, ByVal hVer As Long, ByVal Ang As Double, ByVal Length As Double) As Long
Public Declare Function lcPlineDeleteVer Lib "Litecad.dll" (ByVal hPline As Long, ByVal hVer As Long) As Long
Public Declare Function lcPlineGetFirstVer Lib "Litecad.dll" (ByVal hPline As Long) As Long
Public Declare Function lcPlineGetNextVer Lib "Litecad.dll" (ByVal hPline As Long, ByVal hVer As Long) As Long
Public Declare Function lcPlineGetLastVer Lib "Litecad.dll" (ByVal hPline As Long) As Long
Public Declare Function lcPlineGetPrevVer Lib "Litecad.dll" (ByVal hPline As Long, ByVal hVer As Long) As Long
Public Declare Function lcPlineGetVer Lib "Litecad.dll" (ByVal hPline As Long, ByVal Index As Long) As Long
Public Declare Function lcPlineGetVerPt Lib "Litecad.dll" (ByVal hPline As Long, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Long
Public Declare Function lcPlineGetSeg Lib "Litecad.dll" (ByVal hPline As Long, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Long
Public Declare Function lcPlineReverse Lib "Litecad.dll" (ByVal hPline As Long) As Long
Public Declare Function lcPlineSimple Lib "Litecad.dll" (ByVal hPline As Long, ByVal bSimple As Long, ByVal nLines As Long) As Long
Public Declare Function lcPlineContainPoint Lib "Litecad.dll" (ByVal hPline As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcPlineGetRoundPrm Lib "Litecad.dll" (ByVal hPline As Long, ByVal hVer As Long, ByVal px0 As Long, ByVal py0 As Long, ByVal pBulge As Long, ByVal px1 As Long, ByVal py1 As Long) As Long
Public Declare Function lcMlineAddVer Lib "Litecad.dll" (ByVal hMline As Long, ByVal hVer As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcMlineAddVerDir Lib "Litecad.dll" (ByVal hMline As Long, ByVal hVer As Long, ByVal Ang As Double, ByVal Length As Double) As Long
Public Declare Function lcMlineDeleteVer Lib "Litecad.dll" (ByVal hMline As Long, ByVal hVer As Long) As Long
Public Declare Function lcMlineGetFirstVer Lib "Litecad.dll" (ByVal hMline As Long) As Long
Public Declare Function lcMlineGetNextVer Lib "Litecad.dll" (ByVal hMline As Long, ByVal hVer As Long) As Long
Public Declare Function lcMlineGetLastVer Lib "Litecad.dll" (ByVal hMline As Long) As Long
Public Declare Function lcMlineGetPrevVer Lib "Litecad.dll" (ByVal hMline As Long, ByVal hVer As Long) As Long
Public Declare Function lcMlineGetVer Lib "Litecad.dll" (ByVal hMline As Long, ByVal Index As Long) As Long
Public Declare Function lcMlineGetVerPt Lib "Litecad.dll" (ByVal hMline As Long, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Long
Public Declare Function lcMlineGetSeg Lib "Litecad.dll" (ByVal hMline As Long, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Long
Public Declare Function lcMlineReverse Lib "Litecad.dll" (ByVal hMline As Long) As Long
Public Declare Function lcRPlanAddVer Lib "Litecad.dll" (ByVal hRPlan As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcRPlanSetCurve Lib "Litecad.dll" (ByVal hVer As Long, ByVal Radius As Double, ByVal LenClot1 As Double, ByVal LenClot2 As Double) As Long
Public Declare Function lcRPlanSetPos Lib "Litecad.dll" (ByVal hVer As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcRPlanDeleteVer Lib "Litecad.dll" (ByVal hRPlan As Long, ByVal hVer As Long) As Long
Public Declare Function lcRPlanGetFirstVer Lib "Litecad.dll" (ByVal hRPlan As Long) As Long
Public Declare Function lcRPlanGetNextVer Lib "Litecad.dll" (ByVal hRPlan As Long, ByVal hVer As Long) As Long
Public Declare Function lcRPlanGetLastVer Lib "Litecad.dll" (ByVal hRPlan As Long) As Long
Public Declare Function lcRPlanGetPrevVer Lib "Litecad.dll" (ByVal hRPlan As Long, ByVal hVer As Long) As Long
Public Declare Function lcRPlanGetVer Lib "Litecad.dll" (ByVal hRPlan As Long, ByVal Index As Long) As Long
Public Declare Function lcRPlanGetPoint Lib "Litecad.dll" (ByVal hRPlan As Long, ByVal Dist As Double, ByVal pX As Long, ByVal pY As Long, ByVal pAngle As Long, ByVal pSide As Long) As Long
Public Declare Function lcRPlanGetDist Lib "Litecad.dll" (ByVal hRPlan As Long, ByVal X As Double, ByVal Y As Double, ByVal pX2 As Long, ByVal pY2 As Long, ByVal pDist As Long, ByVal pOffset As Long) As Long
Public Declare Function lcVportSetView Lib "Litecad.dll" (ByVal hVport As Long, ByVal Xcen As Double, ByVal Ycen As Double, ByVal Scal As Double, ByVal Angle As Double) As Long
Public Declare Function lcVportFrolClear Lib "Litecad.dll" (ByVal hVport As Long) As Long
Public Declare Function lcVportFrolAdd Lib "Litecad.dll" (ByVal hVport As Long, ByVal hLayer As Long) As Long
Public Declare Function lcVportFrolGet Lib "Litecad.dll" (ByVal hVport As Long, ByVal iLayer As Long) As Long
Public Declare Function lcVportIsFrol Lib "Litecad.dll" (ByVal hVport As Long, ByVal hLayer As Long) As Long
Public Declare Function lcBlkRefAddAtt Lib "Litecad.dll" (ByVal hBlockRef As Long, ByVal szTag As String, ByVal szValue As String) As Long
Public Declare Function lcBlkRefGetFirstAtt Lib "Litecad.dll" (ByVal hBlockRef As Long) As Long
Public Declare Function lcBlkRefGetNextAtt Lib "Litecad.dll" (ByVal hBlockRef As Long, ByVal hAttrib As Long) As Long
Public Declare Function lcBlkRefGetAtt Lib "Litecad.dll" (ByVal hBlockRef As Long, ByVal szTag As String) As Long
Public Declare Function lcHatchSetPattern Lib "Litecad.dll" (ByVal hHatch As Long, ByVal szFileName As String, ByVal szPatName As String, ByVal Scal As Double, ByVal Angle As Double) As Long
Public Declare Function lcHatchBoundStart Lib "Litecad.dll" (ByVal hHatch As Long) As Long
Public Declare Function lcHatchBoundPoint Lib "Litecad.dll" (ByVal hHatch As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcHatchBoundEndLoop Lib "Litecad.dll" (ByVal hHatch As Long) As Long
Public Declare Function lcHatchBoundEnd Lib "Litecad.dll" (ByVal hHatch As Long) As Long
Public Declare Function lcHatchPatStart Lib "Litecad.dll" (ByVal hHatch As Long) As Long
Public Declare Function lcHatchPatLine Lib "Litecad.dll" (ByVal hHatch As Long, ByVal Angle As Double, ByVal x0 As Double, ByVal y0 As Double, ByVal dx As Double, ByVal dy As Double, ByVal nDash As Long, ByVal L0 As Double, ByVal L1 As Double, ByVal L2 As Double, ByVal L3 As Double, ByVal L4 As Double, ByVal L5 As Double, ByVal L6 As Double, ByVal L7 As Double) As Long
Public Declare Function lcHatchPatEnd Lib "Litecad.dll" (ByVal hHatch As Long) As Long
Public Declare Function lcHatchGetLoopSize Lib "Litecad.dll" (ByVal hHatch As Long, ByVal iLoop As Long) As Long
Public Declare Function lcHatchGetPoint Lib "Litecad.dll" (ByVal hHatch As Long, ByVal iPnt As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function lcRectGetPolyline Lib "Litecad.dll" (ByVal hRect As Long, ByVal pX As Long, ByVal pY As Long, ByVal pBulge As Long) As Long
Public Declare Function lcXlinePutDir Lib "Litecad.dll" (ByVal hXline As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcTinClear Lib "Litecad.dll" (ByVal hTin As Long, ByVal bOnlyTrians As Long) As Long
Public Declare Function lcTinLoad Lib "Litecad.dll" (ByVal hTin As Long, ByVal szFileName As String, ByVal bEmbed As Long) As Long
Public Declare Function lcTinSave Lib "Litecad.dll" (ByVal hTin As Long, ByVal szFileName As String, ByVal bOverwriteExist As Long) As Long
Public Declare Function lcTinAddPtype Lib "Litecad.dll" (ByVal hTin As Long, ByVal szName As String, ByVal szNotes As String, ByVal Color As Long) As Long
Public Declare Function lcTinAddPoint Lib "Litecad.dll" (ByVal hTin As Long, ByVal hPtype As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Function lcTinAddTrian Lib "Litecad.dll" (ByVal hTin As Long, ByVal hPt0 As Long, ByVal hPt1 As Long, ByVal hPt2 As Long) As Long
Public Declare Function lcTinNormalize Lib "Litecad.dll" (ByVal hTin As Long) As Long
Public Declare Function lcTinGetZ Lib "Litecad.dll" (ByVal hTin As Long, ByVal X As Double, ByVal Y As Double, ByVal pZ As Long) As Long
